--- a/MLNEWS/templates/plot.html
+++ b/MLNEWS/templates/plot.html
@@ -64,12 +64,33 @@
                     </div>
                 </div>
             </div>
+
+            <div class="layui-col-sm12 layui-col-md6">
+                <div class="layui-card">
+                    <div class="layui-card-header">好评景点</div>
+                    <div class="layui-card-body" style="min-height: 280px;">
+                        <div id="main5" class="layui-col-sm12" style="height: 300px;"></div>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="layui-col-sm12 layui-col-md6">
+                <div class="layui-card">
+                    <div class="layui-card-header">热门景点</div>
+                    <div class="layui-card-body" style="min-height: 280px;">
+                        <div id="main6" class="layui-col-sm12" style="height: 300px;"></div>
+
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
 
 {% block js %}
     <script src="https://cdn.bootcss.com/echarts/4.2.1-rc1/echarts.min.js"></script>
+    <script src="/static/js/echarts-wordcloud.min.js"></script>
     <script src="/static/js/current.js"></script>
     <script src="/static/layui/lay/modules/layer.js"></script>
     <script type="text/javascript">
@@ -258,6 +279,89 @@
                 }
             ]
         };
+        // 使用刚指定的配置项和数据显示图表。
+        myChart.setOption(option);
+
+
+
+        // 基于准备好的dom，初始化echarts实例
+        var myChart = echarts.init(document.getElementById('main5'));
+        // 指定图表的配置项和数据
+        var option = {
+            tooltip: {
+                show: true
+            },
+            series: [{
+                name: '热门城市',
+                type: 'wordCloud',
+                sizeRange: [10, 50],//文字范围
+                //文本旋转范围，文本将通过rotationStep45在[-90,90]范围内随机旋转
+                rotationRange: [0, 0],
+                rotationStep: 45,
+                textRotation: [0, 45, 90, -45],
+                //形状
+                shape: 'circle',
+                textStyle: {
+                    normal: {
+                        color: function() {//文字颜色的随机色
+                            return 'rgb(' + [
+                                Math.round(Math.random() * 250),
+                                Math.round(Math.random() * 250),
+                                Math.round(Math.random() * 250)
+                            ].join(',') + ')';
+                        }
+                    },
+                    //悬停上去的字体的阴影设置
+                    emphasis: {
+                        shadowBlur: 10,
+                        shadowColor: '#333'
+                    }
+                },
+                data: {{ main5 | safe }}
+            }]
+        };
+
+        // 使用刚指定的配置项和数据显示图表。
+        myChart.setOption(option);
+
+
+        // 基于准备好的dom，初始化echarts实例
+        var myChart = echarts.init(document.getElementById('main6'));
+        // 指定图表的配置项和数据
+        var option = {
+            tooltip: {
+                show: true
+            },
+            series: [{
+                name: '热门景点',
+                type: 'wordCloud',
+                sizeRange: [10, 50],//文字范围
+                //文本旋转范围，文本将通过rotationStep45在[-90,90]范围内随机旋转
+                rotationRange: [0, 0],
+                rotationStep: 45,
+                textRotation: [0, 45, 90, -45],
+                //形状
+                shape: 'star',
+                textStyle: {
+                    normal: {
+                        color: function() {//文字颜色的随机色
+                            return 'rgb(' + [
+                                Math.round(Math.random() * 250),
+                                Math.round(Math.random() * 250),
+                                Math.round(Math.random() * 250)
+                            ].join(',') + ')';
+                        }
+                    },
+                    //悬停上去的字体的阴影设置
+                    emphasis: {
+                        shadowBlur: 10,
+                        shadowColor: '#333'
+                    }
+                },
+                data: {{ main6 | safe }}
+            }]
+        };
+
         // 使用刚指定的配置项和数据显示图表。
         myChart.setOption(option);
     </script>
