--- a/MLNEWS/templates/layout.html
+++ b/MLNEWS/templates/layout.html
@@ -52,6 +52,7 @@
 <ul class="layui-nav layui-bg-blue" lay-filter="">
     <li class="layui-nav-item layui-this"><a href="/">景区首页</a></li>
     <li class="layui-nav-item "><a href="/plot/">数据可视化</a></li>
+    <li class="layui-nav-item "><a href="/aspect/">分类展示</a></li>
     <li class="layui-nav-item "><a href="/search/">搜索景区</a></li>
     <li class="layui-nav-item "><a href="/tuijian/">推荐景区</a></li>
     <li class="layui-nav-item">
