aspect默认北京以及echarts.js本地存储

--- a/MLNEWS/templates/aspect.html
+++ b/MLNEWS/templates/aspect.html
@@ -246,7 +246,7 @@
 {% endblock %}
 
 {% block js %}
-    <script src="https://cdn.bootcss.com/echarts/4.2.1-rc1/echarts.min.js"></script>
+    <script src="/static/js/echarts.min.js"></script>
     <script src="/static/js/echarts-wordcloud.min.js"></script>
     <script src="/static/js/current.js"></script>
     <script src="/static/layui/lay/modules/layer.js"></script>
