评论显示用户名

--- a/MLNEWS/templates/detail.html
+++ b/MLNEWS/templates/detail.html
@@ -81,7 +81,7 @@
             </div>
             <div class="col-md-10 col-sm-10 col-xl-12 one content">
                 <div class="comment-right">
-                    <h4>用户名：{{ comment.user.username }}</h4>
+                    <h4>用户名：{{ comment.user.name }}</h4>
                     <div class="comment-content-header three">
                         <span><i class="glyphicon glyphicon-time two"></i>{{ comment.time }}</span>&nbsp;&nbsp;&nbsp;&nbsp;
                         <span><i class="glyphicon glyphicon-map-marker two"></i>{{ comment.user.address }}</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
